k3s/bentopdf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bentopdf
  namespace: bentopdf
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bentopdf.d-kline.org`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: traefik
        - name: authelia
          namespace: traefik
        - name: security-headers
          namespace: traefik
        - name: wasm-headers
          namespace: traefik
      services:
        - name: bentopdf
          port: 80
  tls: {}
